fix for pie chart not visible when set to not animate and support for dashed line animations

--- a/packages/chart/src/scss/main.scss
+++ b/packages/chart/src/scss/main.scss
@@ -524,19 +524,20 @@
   .linear,
   .Line,
   .Combo {
-    &.animated path {
+    &.animated path.animation {
       opacity: 0;
     }
     &.animate {
-      path {
+      path.animation {
         opacity: 1;
         stroke-dasharray: 2000;
-        stroke-dashoffset: 2000;
+        stroke-dashoffset: 4000;
         animation: dash 2s ease-in-out forwards;
       }
       @keyframes dash {
         to {
           stroke-dashoffset: 0;
+          opacity: 0;
         }
       }
     }
@@ -574,6 +575,10 @@
       .group-1,
       .group-2 {
         transform-origin: center;
+      }
+
+      .visx-linepath .animation {
+        opacity: 0;
       }
     }
   }
